--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <BR>    
             <div class="main-btn">
                 <a href="cv.pdf" target="new" download class="btn">Download CV</a>
-                <a href="#" class="btn two">Hire me</a>
+                <a href="./Pages/contact.html" class="btn two">Hire me</a>
                 <a href="Certificate.pdf" target="new" download class="btn two">Certification</a>
             </div>
             <BR>
