--- a/Pages/about.html
+++ b/Pages/about.html
@@ -34,8 +34,8 @@
             <a href="../index.html">Home</a>
             <a href="#">About</a>
             <a href="./Job_Experiences.html">Job Experiences</a>
-            <a href="./about.html">Educational Background</a>
-            <a href="./contact.html">Contacts</a>
+            <a href="./Educational_Attainment.html">Educational Background</a>
+            <a ="./contact.html">Contacts</a>
         </ul>
         <Main>
             <section>
