--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>+4917645769613</p><BR>
             <BR>    
             <div class="main-btn">
-                <a href="cv.pdf" target="new" download class="btn">Download CV</a>
+                <a href="Resume-CV.pdf" target="new" download class="btn">Download CV</a>
                 <a href="./Pages/contact.html" class="btn two">Hire me</a>
                 <a href="Certificate.pdf" target="new" download class="btn two">Certification</a>
             </div>
